[package]
authors.workspace = true
description = "BridgeHub runtime helpers"
edition.workspace = true
license.workspace = true
name = "bridge-hub-helpers"
repository.workspace = true
version.workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
impl-trait-for-tuples = "0.2.2"
scale-info = { workspace = true }

# Bridge Dependencies
bp-messages = { workspace = true }
bp-runtime = { workspace = true }
bp-xcm-bridge-hub-router = { workspace = true }
bridge-runtime-common = { workspace = true }
pallet-bridge-grandpa = { workspace = true }
pallet-bridge-messages = { workspace = true }
pallet-bridge-parachains = { workspace = true }
pallet-xcm-bridge-hub = { workspace = true }

# Substrate Dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Polkadot Dependencies
xcm = { workspace = true }
xcm-executor = { workspace = true }

# Cumulus Dependencies
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-primitives-core = { workspace = true }

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-runtime/std",
	"bp-xcm-bridge-hub-router/std",
	"bridge-runtime-common/std",
	"codec/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-bridge-grandpa/std",
	"pallet-bridge-messages/std",
	"pallet-bridge-parachains/std",
	"pallet-xcm-bridge-hub/std",
	"xcm/std",
	"xcm-executor/std",
]
